Added JUnit testing and fixed userlogin.

--- a/HealthyCatering/.classpath
+++ b/HealthyCatering/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.14.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.14-swt.jar"/>
 	<classpathentry kind="lib" path="lib/jcommon-1.0.17.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
