--- a/HealthyCatering/.classpath
+++ b/HealthyCatering/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.14-swt.jar"/>
 	<classpathentry kind="lib" path="lib/jcommon-1.0.17.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
